[gd_scene load_steps=15 format=2]

[ext_resource path="res://Imagens/4.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ScriptAdd.gd" type="Script" id=2]
[ext_resource path="res://Fontes/MANDATOR.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFontData" id=14]
font_path = "res://Fontes/NewakeFont-Demo.otf"

[sub_resource type="DynamicFont" id=4]
size = 75
font_data = SubResource( 14 )

[sub_resource type="DynamicFont" id=9]
size = 130
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Fontes/NewakeFont-Demo.otf"

[sub_resource type="DynamicFont" id=11]
size = 40
font_data = SubResource( 10 )

[sub_resource type="DynamicFont" id=13]
size = 130
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=15]
font_path = "res://Fontes/NewakeFont-Demo.otf"

[sub_resource type="DynamicFont" id=16]
size = 220
font_data = SubResource( 15 )

[node name="Control" type="Control"]
anchor_top = 0.002
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.0
margin_top = -0.16
margin_right = -4.0
margin_bottom = 2.0
script = ExtResource( 2 )

[node name="FundoAdd" type="TextureRect" parent="."]
anchor_right = 1.002
anchor_bottom = 0.998
margin_right = 0.15979
margin_bottom = 0.159912
texture = ExtResource( 1 )

[node name="ButtonBack" type="Button" parent="."]
margin_left = 1546.0
margin_top = 975.0
margin_right = 1855.0
margin_bottom = 1054.0
focus_mode = 0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "Voltar"
flat = true

[node name="LineEditNome" type="LineEdit" parent="."]
margin_left = 399.0
margin_top = 404.0
margin_right = 2138.0
margin_bottom = 574.0
rect_scale = Vector2( 0.921104, 1.00623 )
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/read_only = SubResource( 7 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 12 )
caret_blink = true

[node name="LabelPP" type="Label" parent="."]
margin_left = 1678.0
margin_top = 39.0
margin_right = 1876.0
margin_bottom = 78.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 11 )
text = "Pill  Prompt"

[node name="LabelNome" type="Label" parent="."]
margin_left = 94.0
margin_top = 404.0
margin_right = 395.0
margin_bottom = 574.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 13 )
text = "Nome:"

[node name="LabelSala" type="Label" parent="."]
margin_left = 94.0
margin_top = 667.0
margin_right = 395.0
margin_bottom = 837.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 13 )
text = "Sala:"

[node name="LineEditSala" type="LineEdit" parent="."]
margin_left = 399.0
margin_top = 667.0
margin_right = 2138.0
margin_bottom = 837.0
rect_scale = Vector2( 0.921104, 1.00623 )
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/read_only = SubResource( 7 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 12 )
caret_blink = true

[node name="LabelPac" type="Label" parent="."]
margin_left = 235.0
margin_top = 107.0
margin_right = 1226.0
margin_bottom = 320.0
custom_colors/font_color = Color( 0.0784314, 0.188235, 0.317647, 1 )
custom_fonts/font = SubResource( 16 )
text = "Adicionar"

[connection signal="pressed" from="ButtonBack" to="." method="_on_ButtonBack_pressed"]
[connection signal="text_changed" from="LineEditNome" to="." method="_on_LineEditNome_text_changed"]
[connection signal="text_changed" from="LineEditSala" to="." method="_on_LineEditSala_text_changed"]
